--- a/index.html
+++ b/index.html
@@ -99,126 +99,148 @@
               <li class="categories__item"><a href="" class="categories__link">Закуски</a></li>
             </ul>
           </div>
-        </section>
-        <section class="catalog">
+          <a class="categories__list-link"><svg class="categories__list-img" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+            width="16px" height="16px" viewBox="0 0 32 32" style="enable-background:new 0 0 32 32;" xml:space="preserve">
+            <g>
+              <g>
+                <rect width="8" height="8"/>
+                <rect x="24" width="8" height="8"/>
+                <rect x="12" width="8" height="8"/>
+                <rect y="12" width="8" height="8"/>
+                <rect x="24" y="12" width="8" height="8"/>
+                <rect x="12" y="12" width="8" height="8"/>
+                <rect y="24" width="8" height="8"/>
+                <rect x="24" y="24" width="8" height="8"/>
+                <rect x="12" y="24" width="8" height="8"/>
+              </g>
+            </g>
+          </svg>
+        </a>
+      </section>
+      <section class="catalog">
+        <div class="catalog__title-container">
           <h3 class="catalog__title">Популярные</h3>
           <div class="catalog__category">
             <p class="catalog__category--price">По цене</p>
           </div>
-          <ul class="catalog__list">
-            <li class="catalog__item">
-              <a class="catalog__item-image" href="catalog__item.html">
-                <img src="img/catalog-img1.png" width="273" height="200" alt="фото каталога">
-              </a>
-              <div class="catalog__info-page">
-                <p class="catalog__info-name">Плов Чайханский<span class="catalog__info-weight">&nbsp;250 г</span></p>
-                <p class="catalog__info-price">246 ₽</p>
-              </div>
-              <div class="catalog__discription">
-                <p>Камчатский краб, авокадо, свежие овощи и цитрусовый...<b><a class="catalog__discription-link">подробнее</a></b></p>
-              </div>
-            </li>
-            <li class="catalog__item">
-              <a class="catalog__item-image" href="catalog__item.html">
-                <img src="img/open.png" width="273" height="200" alt="фото каталога">
-              </a>
-              <div class="catalog__info-page">
-                <p class="catalog__info-name">Плов Чайханский <span class="catalog__info-weight">&nbsp;250 г</span></p>
-                <p class="catalog__info-price">246 ₽</p>
-              </div>
-              <div class="catalog__discription">
-                <p>Камчатский краб, авокадо, свежие овощи и цитрусовый...<b><a class="catalog__discription-link">подробнее</a></b></p>
-              </div>
-            </li>
-            <li class="catalog__item">
-              <a class="catalog__item-image" href="catalog__item.html">
-                <img src="img/catalog-img3.png" width="273" height="200" alt="фото каталога">
-              </a>
-              <div class="catalog__info-page">
-                <p class="catalog__info-name">Плов Чайханский <span class="catalog__info-weight">&nbsp;250 г</span></p>
-                <p class="catalog__info-price">246 ₽</p>
-              </div>
-              <div class="catalog__discription">
-                <p>Камчатский краб, авокадо, свежие овощи и цитрусовый...<b><a class="catalog__discription-link">подробнее</a></b></p>
-              </div>
-            </li>
-            <li class="catalog__item">
-              <a class="catalog__item-image" href="catalog__item.html">
-                <img src="img/catalog-img4.png" width="273" height="200" alt="фото каталога">
-              </a>
-              <div class="catalog__info-page">
-                <p class="catalog__info-name">Плов Чайханский <span class="catalog__info-weight">&nbsp;250 г</span></p>
-                <p class="catalog__info-price">246 ₽</p>
-              </div>
-              <div class="catalog__discription">
-                <p>Камчатский краб, авокадо, свежие овощи и цитрусовый...<b><a class="catalog__discription-link">подробнее</a></b></p>
-              </div>
-            </li>
-            <li class="catalog__item">
-              <a class="catalog__item-image" href="catalog__item.html">
-                <img src="img/catalog-img5.png" width="273" height="200" alt="фото каталога">
-              </a>
-              <div class="catalog__info-page">
-                <p class="catalog__info-name">Плов Чайханский <span class="catalog__info-weight">&nbsp;250 г</span></p>
-                <p class="catalog__info-price">246 ₽</p>
-              </div>
-              <div class="catalog__discription">
-                <p>Камчатский краб, авокадо, свежие овощи и цитрусовый...<b><a class="catalog__discription-link">подробнее</a></b></p>
-              </div>
-            </li>
-            <li class="catalog__item">
-              <a class="catalog__item-image" href="catalog__item.html">
-                <img src="img/catalog-img6.png" width="273" height="200" alt="фото каталога">
-              </a>
-              <div class="catalog__info-page">
-                <p class="catalog__info-name">Плов Чайханский <span class="catalog__info-weight">&nbsp;250 г</span></p>
-                <p class="catalog__info-price">246 ₽</p>
-              </div>
-              <div class="catalog__discription">
-                <p>Камчатский краб, авокадо, свежие овощи и цитрусовый...<b><a class="catalog__discription-link">подробнее</a></b></p>
-              </div>
-            </li>
-            <li class="catalog__item">
-              <a class="catalog__item-image" href="catalog__item.html">
-                <img src="img/catalog-img7.png" width="273" height="200" alt="фото каталога">
-              </a>
-              <div class="catalog__info-page">
-                <p class="catalog__info-name">Плов Чайханский <span class="catalog__info-weight">&nbsp;250 г</span></p>
-                <p class="catalog__info-price">246 ₽</p>
-              </div>
-              <div class="catalog__discription">
-                <p>Камчатский краб, авокадо, свежие овощи и цитрусовый...<b><a class="catalog__discription-link">подробнее</a></b></p>
-              </div>
-            </li>
-            <li class="catalog__item">
-              <a class="catalog__item-image" href="catalog__item.html">
-                <img src="img/catalog-img8.png" width="273" height="200" alt="фото каталога">
-              </a>
-              <div class="catalog__info-page">
-                <p class="catalog__info-name">Плов Чайханский <span class="catalog__info-weight">&nbsp;250 г</span></p>
-                <p class="catalog__info-price">246 ₽</p>
-              </div>
-              <div class="catalog__discription">
-                <p>Камчатский краб, авокадо, свежие овощи и цитрусовый...<b><a class="catalog__discription-link">подробнее</a></b></p>
-              </div>
-            </li>
-          </ul>
-        </section>
-      </div>
-      <section class="my-order">
-        <a href="" class="my-order__link">
-          <b class="my-order__title">Мой заказ</b>
-          <p class="my-order__number">Пока пусто :)</p>
-        </a>
+        </div>
+        <ul class="catalog__list">
+          <li class="catalog__item">
+            <a class="catalog__item-image" href="catalog__item.html">
+              <img src="img/catalog-img1.png" width="273" height="200" alt="фото каталога">
+            </a>
+            <div class="catalog__info-page">
+              <p class="catalog__info-name">Плов Чайханский<span class="catalog__info-weight">&nbsp;250 г</span></p>
+              <p class="catalog__info-price">246 ₽</p>
+            </div>
+            <div class="catalog__discription">
+              <p>Камчатский краб, авокадо, свежие овощи и цитрусовый...<b><a class="catalog__discription-link">подробнее</a></b></p>
+            </div>
+          </li>
+          <li class="catalog__item">
+            <a class="catalog__item-image" href="catalog__item.html">
+              <img src="img/open.png" width="273" height="200" alt="фото каталога">
+            </a>
+            <div class="catalog__info-page">
+              <p class="catalog__info-name">Плов Чайханский <span class="catalog__info-weight">&nbsp;250 г</span></p>
+              <p class="catalog__info-price">246 ₽</p>
+            </div>
+            <div class="catalog__discription">
+              <p>Камчатский краб, авокадо, свежие овощи и цитрусовый...<b><a class="catalog__discription-link">подробнее</a></b></p>
+            </div>
+          </li>
+          <li class="catalog__item">
+            <a class="catalog__item-image" href="catalog__item.html">
+              <img src="img/catalog-img3.png" width="273" height="200" alt="фото каталога">
+            </a>
+            <div class="catalog__info-page">
+              <p class="catalog__info-name">Плов Чайханский <span class="catalog__info-weight">&nbsp;250 г</span></p>
+              <p class="catalog__info-price">246 ₽</p>
+            </div>
+            <div class="catalog__discription">
+              <p>Камчатский краб, авокадо, свежие овощи и цитрусовый...<b><a class="catalog__discription-link">подробнее</a></b></p>
+            </div>
+          </li>
+          <li class="catalog__item">
+            <a class="catalog__item-image" href="catalog__item.html">
+              <img src="img/catalog-img4.png" width="273" height="200" alt="фото каталога">
+            </a>
+            <div class="catalog__info-page">
+              <p class="catalog__info-name">Плов Чайханский <span class="catalog__info-weight">&nbsp;250 г</span></p>
+              <p class="catalog__info-price">246 ₽</p>
+            </div>
+            <div class="catalog__discription">
+              <p>Камчатский краб, авокадо, свежие овощи и цитрусовый...<b><a class="catalog__discription-link">подробнее</a></b></p>
+            </div>
+          </li>
+          <li class="catalog__item">
+            <a class="catalog__item-image" href="catalog__item.html">
+              <img src="img/catalog-img5.png" width="273" height="200" alt="фото каталога">
+            </a>
+            <div class="catalog__info-page">
+              <p class="catalog__info-name">Плов Чайханский <span class="catalog__info-weight">&nbsp;250 г</span></p>
+              <p class="catalog__info-price">246 ₽</p>
+            </div>
+            <div class="catalog__discription">
+              <p>Камчатский краб, авокадо, свежие овощи и цитрусовый...<b><a class="catalog__discription-link">подробнее</a></b></p>
+            </div>
+          </li>
+          <li class="catalog__item">
+            <a class="catalog__item-image" href="catalog__item.html">
+              <img src="img/catalog-img6.png" width="273" height="200" alt="фото каталога">
+            </a>
+            <div class="catalog__info-page">
+              <p class="catalog__info-name">Плов Чайханский <span class="catalog__info-weight">&nbsp;250 г</span></p>
+              <p class="catalog__info-price">246 ₽</p>
+            </div>
+            <div class="catalog__discription">
+              <p>Камчатский краб, авокадо, свежие овощи и цитрусовый...<b><a class="catalog__discription-link">подробнее</a></b></p>
+            </div>
+          </li>
+          <li class="catalog__item">
+            <a class="catalog__item-image" href="catalog__item.html">
+              <img src="img/catalog-img7.png" width="273" height="200" alt="фото каталога">
+            </a>
+            <div class="catalog__info-page">
+              <p class="catalog__info-name">Плов Чайханский <span class="catalog__info-weight">&nbsp;250 г</span></p>
+              <p class="catalog__info-price">246 ₽</p>
+            </div>
+            <div class="catalog__discription">
+              <p>Камчатский краб, авокадо, свежие овощи и цитрусовый...<b><a class="catalog__discription-link">подробнее</a></b></p>
+            </div>
+          </li>
+          <li class="catalog__item">
+            <a class="catalog__item-image" href="catalog__item.html">
+              <img src="img/catalog-img8.png" width="273" height="200" alt="фото каталога">
+            </a>
+            <div class="catalog__info-page">
+              <p class="catalog__info-name">Плов Чайханский <span class="catalog__info-weight">&nbsp;250 г</span></p>
+              <p class="catalog__info-price">246 ₽</p>
+            </div>
+            <div class="catalog__discription">
+              <p>Камчатский краб, авокадо, свежие овощи и цитрусовый...<b><a class="catalog__discription-link">подробнее</a></b></p>
+            </div>
+          </li>
+        </ul>
       </section>
     </div>
-  </main>
-  <section class="modal">
-    <div class="modal__wrapper">
-      <div class="modal__container">
-        <div class="modal__image" href="catalog__item.html">
+    <section class="my-order">
+      <a href="" class="my-order__link">
+        <b class="my-order__title">Мой заказ</b>
+        <p class="my-order__number">Пока пусто :)</p>
+      </a>
+    </section>
+  </div>
+</main>
+<section class="modal">
+  <div class="modal__wrapper">
+    <div class="modal__image" href="catalog__item.html">
+      <picture>
+        <source media="(min-width: 1200px)" srcset="img/big-open.png" width="850" height="630">
           <img src="img/catalog-img7.png" width="273" height="200" alt="фото каталога">
-        </div>
+        </picture>
+      </div>
+      <div class="modal__container">
         <div class="modal__description">
           <div class="modal__description-container">
             <h3 class="modal__title">Стейк из говядины <span class="modal__title-weight">250 г</span></h3>
@@ -256,13 +278,17 @@
           </div>
         </div>
         <div class="modal__buttoms">
-        <div class="modal__quantity">
-          <span class="modal__quantity-number quantity-number__minus">-</span>
-          <span>2</span>
-          <span class="modal__quantity-number quantity-number__plus">+</span>
+          <div class="modal__quantity">
+            <span class="modal__quantity-number quantity-number__minus">-</span>
+            <span class="quantity-number__number">2</span>
+            <span class="modal__quantity-number quantity-number__plus">+</span>
+          </div>
+          <button type="submit" class="modal__submit modal__submit--mobile">Готово</button>
+          <div  class="modal__submit modal__submit--desktop">
+            <span class="modal__submit-number">246 ₽</span>
+            <span class="modal__submit-text">Добавить</span>
+          </div>
         </div>
-        <button type="submit" class="modal__submit button">Готово</button>
-      </div>
       </div>
       <button class="modal__close" type="button">x</button>
     </section>
