--- a/index.html
+++ b/index.html
@@ -292,5 +292,8 @@
       </div>
       <button class="modal__close" type="button">x</button>
     </section>
+
+    <script src="js/scripts.js"> </script>
+
   </body>
   </html>
