--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         </div>
         <ul class="catalog__list">
           <li class="catalog__item">
-            <a class="catalog__item-image" href="catalog__item.html">
+            <a class="catalog__item-image" href="#">
               <img src="img/catalog-img1.png" width="273" height="200" alt="фото каталога">
             </a>
             <div class="catalog__info-page">
@@ -138,7 +138,7 @@
             </div>
           </li>
           <li class="catalog__item">
-            <a class="catalog__item-image" href="catalog__item.html">
+            <a class="catalog__item-image catalog__item-js" href="#">
               <img src="img/open.png" width="273" height="200" alt="фото каталога">
             </a>
             <div class="catalog__info-page">
@@ -150,7 +150,7 @@
             </div>
           </li>
           <li class="catalog__item">
-            <a class="catalog__item-image" href="catalog__item.html">
+            <a class="catalog__item-image catalog__item-js" href="#">
               <img src="img/catalog-img3.png" width="273" height="200" alt="фото каталога">
             </a>
             <div class="catalog__info-page">
@@ -162,7 +162,7 @@
             </div>
           </li>
           <li class="catalog__item">
-            <a class="catalog__item-image" href="catalog__item.html">
+            <a class="catalog__item-image" href="#">
               <img src="img/catalog-img4.png" width="273" height="200" alt="фото каталога">
             </a>
             <div class="catalog__info-page">
@@ -174,7 +174,7 @@
             </div>
           </li>
           <li class="catalog__item">
-            <a class="catalog__item-image" href="catalog__item.html">
+            <a class="catalog__item-image" href="#">
               <img src="img/catalog-img5.png" width="273" height="200" alt="фото каталога">
             </a>
             <div class="catalog__info-page">
@@ -186,7 +186,7 @@
             </div>
           </li>
           <li class="catalog__item">
-            <a class="catalog__item-image" href="catalog__item.html">
+            <a class="catalog__item-image" href="#">
               <img src="img/catalog-img6.png" width="273" height="200" alt="фото каталога">
             </a>
             <div class="catalog__info-page">
@@ -198,7 +198,7 @@
             </div>
           </li>
           <li class="catalog__item">
-            <a class="catalog__item-image" href="catalog__item.html">
+            <a class="catalog__item-image" href="#">
               <img src="img/catalog-img7.png" width="273" height="200" alt="фото каталога">
             </a>
             <div class="catalog__info-page">
@@ -210,7 +210,7 @@
             </div>
           </li>
           <li class="catalog__item">
-            <a class="catalog__item-image" href="catalog__item.html">
+            <a class="catalog__item-image" href="#">
               <img src="img/catalog-img8.png" width="273" height="200" alt="фото каталога">
             </a>
             <div class="catalog__info-page">
@@ -225,7 +225,7 @@
       </section>
     </div>
     <section class="my-order">
-      <a href="" class="my-order__link">
+      <a href="#" class="my-order__link">
         <b class="my-order__title">Мой заказ</b>
         <p class="my-order__number">Пока пусто :)</p>
       </a>
@@ -234,7 +234,7 @@
 </main>
 <section class="modal">
   <div class="modal__wrapper">
-    <div class="modal__image" href="catalog__item.html">
+    <div class="modal__image">
       <picture>
         <source media="(min-width: 1200px)" srcset="img/big-open.png" width="850" height="630">
           <img src="img/catalog-img7.png" width="273" height="200" alt="фото каталога">
@@ -292,8 +292,6 @@
       </div>
       <button class="modal__close" type="button">x</button>
     </section>
-
     <script src="js/scripts.js"> </script>
-
   </body>
   </html>
