--- a/index.html
+++ b/index.html
@@ -87,16 +87,16 @@
           </h2>
           <div class="categories__list-wrapper">
             <ul class="categories__list">
-              <li class="categories__item categories__item--active"><a class="categories__link categories__link--active">Популярные</a></li>
-              <li class="categories__item"><a href="" class="categories__link">Горячее</a></li>
-              <li class="categories__item"><a href="" class="categories__link">Гарниры</a></li>
-              <li class="categories__item"><a href="" class="categories__link">Выпечка</a></li>
-              <li class="categories__item"><a href="" class="categories__link">Гриль</a></li>
-              <li class="categories__item"><a href="" class="categories__link">Детское</a></li>
-              <li class="categories__item"><a href="" class="categories__link">Закуски</a></li>
-              <li class="categories__item"><a href="" class="categories__link">Супы</a></li>
-              <li class="categories__item"><a href="" class="categories__link">Детское</a></li>
-              <li class="categories__item"><a href="" class="categories__link">Закуски</a></li>
+              <li class="categories__item categories__item--active"><a class="categories__link categories__link--active">Популярные<sup class="categories__link-sup">17</sup></a></li>
+              <li class="categories__item"><a href="" class="categories__link">Горячее<sup class="categories__link-sup">8</sup></a></li>
+              <li class="categories__item"><a href="" class="categories__link">Гарниры<sup class="categories__link-sup">65</sup></a></li>
+              <li class="categories__item"><a href="" class="categories__link">Выпечка<sup class="categories__link-sup">50</sup></a></li>
+              <li class="categories__item"><a href="" class="categories__link">Гриль<sup class="categories__link-sup">20</sup></a></li>
+              <li class="categories__item"><a href="" class="categories__link">Детское<sup class="categories__link-sup">19</sup></a></li>
+              <li class="categories__item"><a href="" class="categories__link">Закуски<sup class="categories__link-sup">7</sup></a></li>
+              <li class="categories__item"><a href="" class="categories__link">Супы<sup class="categories__link-sup">24</sup></a></li>
+              <li class="categories__item"><a href="" class="categories__link">Детское<sup class="categories__link-sup">27</sup></a></li>
+              <li class="categories__item"><a href="" class="categories__link">Закуски<sup class="categories__link-sup">27</sup></a></li>
             </ul>
           </div>
           <a class="categories__list-link"><svg class="categories__list-img" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
@@ -257,19 +257,19 @@
                 <h3 class="modal__item-title">Пищевая ценность</h3>
                 <ul class="modal__value-list value__list">
                   <li class="value__item">
-                    <number class="value__list-number">650</number>
+                    <number class="value__list-number value__number-1">650</number>
                     <p class="value__list-text">ккал</p>
                   </li>
                   <li class="value__item">
-                    <number class="value__list-number">34</number>
+                    <number class="value__list-number value__number-2">34</number>
                     <p class="value__list-text">белки</p>
                   </li>
                   <li class="value__item">
-                    <number class="value__list-number">60</number>
+                    <number class="value__list-number value__number-3">60</number>
                     <p class="value__list-text">жиры</p>
                   </li>
                   <li class="value__item">
-                    <number class="value__list-number">12</number>
+                    <number class="value__list-number value__number-4">12</number>
                     <p class="value__list-text">углеводы</p>
                   </li>
                 </ul>
